<resources>
    <string name="app_name">calc</string>
    <string name="btn_begin">开始</string>
    <string name="btn_setting">设置</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_clear">清除</string>
    <string name="button_submit">提交</string>
    <string name="equals_symbol">=</string>
    <string name="operator_symbol">勾选要使用的运算符</string>
    <string name="question_mark">\?</string>
    <string name="current_score">本次得分：</string>
    <string name="input_result">你的答案：%s</string>
    <string name="lose_current_score_str">失败了,本次得分：%d</string>
    <string name="history_high_score">历史最高记录：</string>
    <string name="quit_dialog_title">警告</string>
    <string name="dialog_positive_message">确定</string>
    <string name="dialog_negative_message">我再想想</string>
    <string name="quit_dialog_message">确定退出吗?</string>
    <string name="continue_message">继续挑战</string>
    <string name="return_message">回到主页</string>

    <string name="number_upper_limit">数值上限</string>
    <string name="set_operator_symbol_add">+</string>
    <string name="set_operator_symbol_reduce">-</string>
    <string name="set_operator_symbol_multiplication">*</string>
    <string name="set_operator_symbol_division">÷</string>
    <string name="setting_save_btn_str">保存</string>
    <string name="number_upper_type">数值上限类型</string>
    <string name="join_operation_type">以参与运算的数值为准</string>
    <string name="result_operation_type">以运算结果的数值为准(只有加减运算)</string>
    <string name="reward_main">我的</string>
    <string name="background_music">背景音乐：</string>
    <string name="background_sound">背景音效：</string>
    <string name="time_info_str">单次答题时长</string>
    <string name="secret_book_str">秘籍</string>
    <string name="view_src_img_str">查看原图</string>
    <string name="title_activity_show_src_image">原图</string>
    <string name="unlocking_difficulty">解锁难度</string>
    <string name="simple">简单</string>
    <string name="normal">普通</string>
    <string name="difficult">困难</string>


</resources>
