<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="setData"
            type="cn.kanyun.calc.viewmodel.SettingViewModel" />
        <import type="cn.kanyun.calc.Type" alias="type"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SettingFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_upper_limit"
            app:layout_constraintBottom_toBottomOf="@+id/editText2"
            app:layout_constraintEnd_toStartOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText2" />


        <!--android:onTextChanged后面一个括号内的参数,是android:onTextChanged中参数(onTextChanged是EditText内置的方法),而后面括号的参数,是自定义方法的参数-->
        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="numberSigned"
            android:onTextChanged="@{(charSequence,start,before,count)->setData.numberChange(charSequence,start,before,count)}"
            android:text="@{String.valueOf(setData.numberUpperLimit)}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/guideline26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/operator_symbol"
            app:layout_constraintBottom_toTopOf="@+id/guideline25"
            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline21"
            app:layout_constraintVertical_bias="0.669" />

        <!--checked后面的表达式不能添加()-> -->
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{setData.isChecked(@string/set_operator_symbol_add)}"
            android:onCheckedChanged="@{()->setData.checkedSymbol(@string/set_operator_symbol_add)}"
            android:text="@string/set_operator_symbol_add"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/checkBox3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            tools:text="+" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{setData.isChecked(@string/set_operator_symbol_division)}"
            android:onCheckedChanged="@{()->setData.checkedSymbol(@string/set_operator_symbol_division)}"
            android:text="@string/set_operator_symbol_division"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox4"
            app:layout_constraintTop_toTopOf="@+id/checkBox4"
            app:layout_constraintVertical_bias="0.0"
            tools:text="/" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{setData.isChecked(@string/set_operator_symbol_reduce)}"
            android:onCheckedChanged="@{()->setData.checkedSymbol(@string/set_operator_symbol_reduce)}"
            android:text="@string/set_operator_symbol_reduce"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintEnd_toStartOf="@+id/checkBox4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toTopOf="@+id/checkBox"
            tools:text="-" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{setData.isChecked(@string/set_operator_symbol_multiplication)}"
            android:onCheckedChanged="@{()->setData.checkedSymbol(@string/set_operator_symbol_multiplication)}"
            android:text="@string/set_operator_symbol_multiplication"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox3"
            app:layout_constraintEnd_toStartOf="@+id/checkBox2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox3"
            app:layout_constraintTop_toTopOf="@+id/checkBox3"
            tools:text="*" />

        <Button
            android:id="@+id/setting_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{()->setData.saveSetting()}"
            android:text="@string/setting_save_btn_str"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline34" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_upper_type"
            app:layout_constraintBottom_toTopOf="@+id/guideline21"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline26" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onCheckedChanged="@{(radioGroup,checkId)->setData.typeChange(radioGroup,checkId)}"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9">

            <RadioButton
                android:id="@+id/join_operation_type_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{setData.numberUpperType == type.MEMBER_GUIDE.number?true:false}"
                android:text="@string/join_operation_type" />

            <RadioButton
                android:id="@+id/result_operation_type_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{setData.numberUpperType == type.RESULT_GUIDE.number?true:false}"
                android:text="@string/result_operation_type" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/background_music"
            app:layout_constraintBottom_toTopOf="@+id/guideline34"
            app:layout_constraintEnd_toStartOf="@+id/music_switch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline25" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/music_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:kswTintColor="#16A560"
            app:kswBackColor="#650796F7"
            app:kswTextOff="OFF"
            app:kswTextOn="ON"
            android:textColor="@android:color/darker_gray"
            app:kswTextExtra="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_sound"
            app:layout_constraintBottom_toBottomOf="@+id/music_switch"
            app:layout_constraintEnd_toStartOf="@+id/sound_switch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/music_switch"
            app:layout_constraintTop_toTopOf="@+id/music_switch" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sound_switch"
            app:kswTintColor="#16A560"
            app:kswBackColor="#650796F7"
            app:kswTextOff="OFF"
            app:kswTextOn="ON"
            android:textColor="@android:color/darker_gray"
            app:kswTextExtra="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>